Name:                xlsx

Version:             0.1.0.4

Synopsis:            Simple and incomplete Excel file parser/writer
Description:
    This library can help you to get some data read and written in Office
    Open XML xlsx format. Small subset of xlsx format is supported.
    .
    For examples look into "Codec.Xlsx".
    .
    Format is covered by ECMA-376 standard:
    <http://www.ecma-international.org/publications/standards/Ecma-376.htm>
Extra-source-files:
                     changelog


Homepage:            https://github.com/qrilka/xlsx
Bug-Reports:         https://github.com/qrilka/xlsx/issues
License:             MIT
License-file:        LICENSE
Author:              Tim, Max, Kirill Zaborsky
Maintainer:          qrilka@gmail.com

Category:            Codec
Build-type:          Simple

Cabal-version:       >=1.10


Library
  Hs-source-dirs:    src
  Exposed-modules:   Codec.Xlsx
                     , Codec.Xlsx.Parser
                     , Codec.Xlsx.Types
                     , Codec.Xlsx.Writer

  Build-depends:     base         == 4.*
                     , containers   >= 0.5.0.0
                     , transformers >= 0.3.0.0
                     , bytestring   >= 0.10.0.2
                     , text         >= 0.11.3.1
                     , conduit      >= 1.0.0
                     , xml-types    == 0.3.*
                     , xml-conduit  >= 1.1.0
                     , zip-archive  == 0.2.*
                     , digest       == 0.0.*
                     , zlib         == 0.5.4.*
                     , utf8-string  >= 0.3.7
                     , time         >= 1.4.0.1
                     , old-time     >= 1.1.0.1
                     , old-locale   >= 1.0.0.5
                     , data-default >= 0.5.0.0
                     , vector       >= 0.10
                     , binary-search
  Default-Language:     Haskell2010


